--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,29 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev src/server.ts"
   },
-  "author": "jonas rocha",
-  "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.3"
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
+    "prisma": "^3.9.2"
   }
 }
